--- a/pages/convite.html
+++ b/pages/convite.html
@@ -22,7 +22,6 @@
     <script src="https://kit.fontawesome.com/c785f8ac1b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/main-style.css">
-    <link rel="stylesheet" href="../assets/css/form-style.css">
   </head>
 
   <body>
@@ -68,51 +67,6 @@
 
         </div>
 
-        <div class="formDiv">
-          <h3>Informações:</h3>
-          <form id="registerForm">
-            
-            <div class="contentBox">
-              <input class="contentInput" type="text" placeholder="Nome" id="name" required>
-            </div>
-
-            <div class="contentBox">
-              <input class="contentInput" type="text" placeholder="Endereço" id="address" required>
-            </div>
-
-            <div class="contentBox">
-              <select class="contentInput infoSubmit" id="sports" required>
-                <option value="" disabled selected>Selecione...</option>
-                <option value="futebol">Futebol</option>
-                <option value="basquete">Basquete</option>
-                <option value="volei">Vôlei</option>
-                <option value="handball">Handball</option>
-                <option value="futsal">Futsal</option>
-              </select>
-            </div>
-
-            <div class="contentBox">
-              <input class="contentInput" type="text" placeholder="Abertura" id="opening" onfocus="this.type='datetime-local'" onblur="if (!this.value) this.type='text'">
-            </div>
-
-            <div class="contentBox">
-              <input class="contentInput" type="text" placeholder="Fechamento" id="closing" onfocus="this.type='datetime-local'" onblur="if (!this.value) this.type='text'">
-            </div>
-
-            <div class="contentBox">
-              <input class="contentInput" type="text" placeholder="Contato" id="contact" required>
-            </div>
-
-            <div class="contentBox">
-              <input class="contentInput" type="text" placeholder="Descrição" id="description" required>
-            </div>
-
-            <button id="button" type="submit">Cadastrar</button>
-
-          </form>
-
-        </div>
-
       </section>
 
     </main>
@@ -136,7 +90,7 @@
     </footer>
 
     <!-- Java Script Request -->
-    <script src="../assets/scripts/script.js"></script>
+    <!-- <script src="../assets/scripts/script.js"></script> -->
 
   </body>
     
