--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
               <input class="searchInput" type="search" placeholder="Buscar..">
             </div> 
       
-            <div class="user">
-              
+            <div class="menu">
               <input type="checkbox" name="todo" id="menuToggler">
               <label for="menuToggler">
                 <i class="fa-solid fa-bars"></i>
