--- a/pages/convite.html
+++ b/pages/convite.html
@@ -46,7 +46,7 @@
         <input class="searchInput" type="search" placeholder="Buscar..">
       </div> 
 
-      <div class="user">
+      <div class="menu">
         
         <input type="checkbox" name="todo" id="menuToggler">
         <label for="menuToggler">
