--- a/pages/404.html
+++ b/pages/404.html
@@ -57,9 +57,9 @@
         </header>
 
         <main>
-            <div class="user-container">
-                
-            </div>
+            <section class="container">
+                <h1>404 - Page not found</h1>
+            </section>
         </main>
 
         <footer>
@@ -81,7 +81,6 @@
         </footer>
 
         <!-- Java Script Request -->
-        <script src="../assets/scripts/profile.js"></script>
        
     </body>
 
