--- a/pages/users.html
+++ b/pages/users.html
@@ -22,6 +22,8 @@
         <script src="https://kit.fontawesome.com/c785f8ac1b.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../assets/css/main-style.css">
         <link rel="stylesheet" href="../assets/css/page-style.css">
+        <link rel="stylesheet" href="../assets/css/users-style.css">
+
     </head>
 
     <body>
@@ -59,7 +61,7 @@
 
         <main>
 
-            <section class="container">
+            <section>
               <div id="users">
 
               </div>
