--- a/pages/event-register.html
+++ b/pages/event-register.html
@@ -132,7 +132,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <!-- Java Script Request -->
-        <script src="../assets/scripts/evento.js"></script>
+        <script src="../assets/scripts/eventRegister.js"></script>
         <script src="../assets/scripts/checkLogin.js"></script>
        
     </body>
