--- a/pages/events.html
+++ b/pages/events.html
@@ -59,8 +59,10 @@
 
         <main>
 
-            <section class="container">
+            <section>
+                <div id="events">
 
+                </div>
             </section>
 
         </main>
@@ -88,7 +90,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <!-- Importação do seu arquivo JavaScript -->
-        <script src="../assets/scripts/login.js"></script>
+        <script src="../assets/scripts/events.js"></script>
         <script src="../assets/scripts/checkLogin.js"></script>
        
     </body>
