--- a/pages/cadastrararena.html
+++ b/pages/cadastrararena.html
@@ -22,7 +22,6 @@
     <script src="https://kit.fontawesome.com/c785f8ac1b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/css/main-style.css">
     <link rel="stylesheet" href="../assets/css/page-style.css">
-    <link rel="stylesheet" href="../assets/css/form-style.css">
   </head>
 
   <body>
@@ -106,7 +105,7 @@
               <input class="contentInput" type="text" placeholder="Descrição" id="description" required>
             </div>
 
-            <button id="button" type="submit">Cadastrar</button>
+            <button class="botaodaarena" id="button" type="submit">Cadastrar</button>
 
           </form>
 
@@ -119,7 +118,7 @@
     <footer>
 
       <div class="footer-logo">
-        <img src="../assets/img/findsports-footer.svg" alt="FindSports Logo">
+        <h1 class="royalacid em-3 secoundary">FindSports</h1>
       </div>
 
       <nav class="navbar">
