--- a/pages/event-register.html
+++ b/pages/event-register.html
@@ -23,7 +23,6 @@
 
         <link rel="stylesheet" href="../assets/css/main-style.css">
         <link rel="stylesheet" href="../assets/css/page-style.css">
-        <link rel="stylesheet" href="../assets/css/form-style.css">
     
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
@@ -113,7 +112,7 @@
         <footer>
 
             <div class="footer-logo">
-              <img src="../assets/img/findsports-footer.svg" alt="FindSports Logo">
+              <h1 class="royalacid em-3 secoundary">FindSports</h1>
             </div>
       
             <nav class="navbar">
