--- a/pages/users.html
+++ b/pages/users.html
@@ -72,7 +72,7 @@
         <footer>
 
             <div class="footer-logo">
-              <img src="../assets/img/findsports-footer.svg" alt="FindSports Logo">
+              <h1 class="royalacid em-3 secoundary">FindSports</h1>
             </div>
       
             <nav class="navbar">
