--- a/pages/user-profile.html
+++ b/pages/user-profile.html
@@ -22,7 +22,6 @@
         <script src="https://kit.fontawesome.com/c785f8ac1b.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../assets/css/main-style.css">
         <link rel="stylesheet" href="../assets/css/page-style.css">
-        <link rel="stylesheet" href="../assets/css/form-style.css">
         <link rel="stylesheet" href="../assets/css/user-style.css">
     </head>
 
@@ -104,7 +103,7 @@
         <footer>
 
             <div class="footer-logo">
-              <img src="../assets/img/findsports-footer.svg" alt="FindSports Logo">
+              <h1 class="royalacid em-3 secoundary">FindSports</h1>
             </div>
       
             <nav class="navbar">
