--- a/pages/view.html
+++ b/pages/view.html
@@ -9,7 +9,7 @@
 
         <!-- Visible Changes -->
         <title>Minha aplicação</title>
-        <link rel="icon" type="image/svg" href="assets/img/findsports-icon.svg">
+        <link rel="icon" type="image/svg" href="assets/svg/findsports-icon.svg">
 
         <!-- Page Informations -->
         <meta name="author" content="FindSports Inc." />
@@ -32,12 +32,12 @@
         <header>
 
             <a href="../index.html" class="logo">
-              <img src="../assets/img/findsports-logo.svg" alt="FindSports Logo">
+              <img src="../assets/svg/findsports-logo.svg" alt="FindSports Logo">
             </a>
       
             <nav class="navbar">
               <ul class="m-0">
-                <li><a href="cadastrararena.html">Arenas</a></li>
+                <li><a href="arena-register.html">Arenas</a></li>
                 <li><a href="#">Times</a></li>
                 <li><a href="#">Campeonatos</a></li>
                 <li><a href="#">Sobre Nós</a></li>
