--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
 
         <!-- Visible Changes -->
         <title>Minha aplicação</title>
-        <link rel="icon" type="image/svg" href="../assets/img/findsports-icon.svg">
+        <link rel="icon" type="image/svg" href="../assets/svg/findsports-icon.svg">
 
         <!-- Page Informations -->
         <meta name="author" content="FindSports Inc." />
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <script src="https://kit.fontawesome.com/c785f8ac1b.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../assets/css/main-style.css">
-        <link rel="stylesheet" href="../assets/css/page-style.css">
+        
     </head>
 
     <body>
@@ -29,12 +29,12 @@
         <header>
 
             <a href="../index.html" class="logo">
-              <img src="../assets/img/findsports-logo.svg" alt="FindSports Logo">
+              <img src="../assets/svg/findsports-logo.svg" alt="FindSports Logo">
             </a>
       
             <nav class="navbar">
               <ul>
-                <li><a href="../pages/cadastrararena.html">Arenas</a></li>
+                <li><a href="../pages/arena-register.html">Arenas</a></li>
                 <li><a href="#">Times</a></li>
                 <li><a href="#">Campeonatos</a></li>
                 <li><a href="#">Sobre Nós</a></li>
