--- a/pages/about.html
+++ b/pages/about.html
@@ -88,7 +88,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <!-- Importação do seu arquivo JavaScript -->
-        <script src="../assets/scripts/login.js"></script>
+        <script src="../assets/scripts/main.js"></script>
         <script src="../assets/scripts/checkDisable.js"></script>
 
     </body>
