--- a/pages/arena-register.html
+++ b/pages/arena-register.html
@@ -105,7 +105,7 @@
               <input class="contentInput" type="text" placeholder="Descrição" id="description" required>
             </div>
 
-            <button class="botaodaarena" id="button" type="submit">Cadastrar</button>
+            <button class="button1" id="button" type="submit">Cadastrar</button>
 
           </form>
 
