--- a/pages/arenas.html
+++ b/pages/arenas.html
@@ -21,8 +21,6 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <script src="https://kit.fontawesome.com/c785f8ac1b.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../assets/css/main-style.css">
-        
-        <link rel="stylesheet" href="../assets/css/search-arena.css">
     </head>
 
     <body>
@@ -91,8 +89,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <!-- Importação do seu arquivo JavaScript -->
-        <script src="../assets/scripts/arenas.js"></script>
+        <script src="../assets/scripts/main.js"></script>
         <script src="../assets/scripts/checkLogin.js"></script>
+        <script src="../assets/scripts/arenas.js"></script>
        
     </body>
 
