--- a/pages/event-register.html
+++ b/pages/event-register.html
@@ -99,7 +99,7 @@
                             <input class="contentInput" type="description" placeholder="Descrição" id="description" required>
                         </div>
 
-                        <button id="button" type="submit">Salvar</button>
+                        <button class="button1" id="button" type="submit">Salvar</button>
 
                     </form>
         
