--- a/pages/users.html
+++ b/pages/users.html
@@ -92,8 +92,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <!-- Importação do seu arquivo JavaScript -->
-        <script src="../assets/scripts/users.js"></script>
+        <script src="../assets/scripts/main.js"></script>
         <script src="../assets/scripts/checkLogin.js"></script>
+        <script src="../assets/scripts/users.js"></script>
        
     </body>
 
