--- a/pages/landing.html
+++ b/pages/landing.html
@@ -136,6 +136,7 @@
 
         <!-- Importação do seu arquivo JavaScript -->
         <script src="../assets/scripts/main.js"></script>
+        <script src="../assets/scripts/checkUnlogged.js"></script>
         <script src="../assets/scripts/checkDisable.js"></script>
         <script src="../assets/scripts/login.js"></script>
 
