--- a/pages/events.html
+++ b/pages/events.html
@@ -90,8 +90,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <!-- Importação do seu arquivo JavaScript -->
-        <script src="../assets/scripts/events.js"></script>
+        <script src="../assets/scripts/main.js"></script>
         <script src="../assets/scripts/checkLogin.js"></script>
+        <script src="../assets/scripts/events.js"></script>
        
     </body>
 
