--- a/pages/user-edit.html
+++ b/pages/user-edit.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="https://kit.fontawesome.com/c785f8ac1b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css">
-    <!-- My Css Requests -->
+    <!-- FindSports CSS Requests -->
     <link rel="stylesheet" href="../assets/css/main-style.css">
     
   </head>
@@ -109,7 +109,7 @@
             </div>
 
             <div class="contentBox">
-                <select class="contentInput infoSubmit" id="sports" multiple required>
+                <select class="selectMulti contentInput infoSubmit" id="sports" multiple required>
                     <option value="futebol">Futebol</option>
                     <option value="basquete">Basquete</option>
                     <option value="volei">Vôlei</option>
