--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <script src="https://kit.fontawesome.com/c785f8ac1b.js" crossorigin="anonymous"></script>
 
-        <!-- FindSports Requests -->
+        <!-- FindSports CSS Requests -->
         <link rel="stylesheet" href="assets/css/main-style.css">
         
     </head>
