--- a/pages/event-register.html
+++ b/pages/event-register.html
@@ -20,7 +20,8 @@
         <!-- Third Party Requests -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <script src="https://kit.fontawesome.com/c785f8ac1b.js" crossorigin="anonymous"></script>
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css">
+        <!-- FindSports CSS Requests -->
         <link rel="stylesheet" href="../assets/css/main-style.css">
         
     
@@ -81,7 +82,7 @@
                         </div>
 
                         <div class="contentBox">
-                            <select class="contentInput infoSubmit" id="sport" required>
+                            <select class="selectMulti contentInput infoSubmit" id="sport" required>
                                 <option value="futebol">Futebol</option>
                                 <option value="basket">Basquete</option>
                                 <option value="volei">Vôlei</option>
@@ -129,6 +130,8 @@
 
         <!-- Importação do jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 
         <!-- Java Script Request -->
         <script src="../assets/scripts/main.js"></script>
