--- a/pages/user-edit.html
+++ b/pages/user-edit.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Visible Changes -->
-    <title>FindSports</title>
+    <title>FindSports - Editar Usuário</title>
     <link rel="icon" type="image/svg" href="../assets/svg/findsports-icon.svg">
 
     <!-- Page Informations -->
@@ -43,11 +43,6 @@
         </ul>
       </nav>
 
-      <div class="searchBox">
-        <span class="searchIcon material-symbols-outlined">search</span>
-        <input class="searchInput" type="search" placeholder="Buscar..">
-      </div> 
-
       <div class="menu">
         
         <input type="checkbox" name="todo" id="menuToggler">
@@ -64,8 +59,8 @@
 
         <div class="column">
 
-          <h2>Editar Perfil</h2>
-          <p>Insira suas relações relevantes para que outros<br>usuários tenham mais informações sobre você.</p>
+          <h2 class="center">Editar Perfil</h2>
+          <p class="center">Insira suas relações relevantes para que outros<br>usuários tenham mais informações sobre você.</p>
 
         </div>
 
@@ -110,11 +105,11 @@
 
             <div class="contentBox">
                 <select class="selectMulti contentInput infoSubmit" id="sports" multiple required>
-                    <option value="futebol">Futebol</option>
-                    <option value="basquete">Basquete</option>
-                    <option value="volei">Vôlei</option>
-                    <option value="handball">Handball</option>
-                    <option value="futsal">Futsal</option>
+                    <option value="Futebol">Futebol</option>
+                    <option value="Basquete">Basquete</option>
+                    <option value="Volei">Vôlei</option>
+                    <option value="Handball">Handball</option>
+                    <option value="Futsal">Futsal</option>
                 </select>
             </div>
 
