--- a/index.html
+++ b/index.html
@@ -44,18 +44,13 @@
               </ul>
             </nav>
       
-            <div class="searchBox">
-              <span class="searchIcon material-symbols-outlined">search</span>
-              <input class="searchInput" type="search" placeholder="Buscar..">
-            </div> 
-      
             <div class="user-content">
                 <div class="navbox notify" onclick="toggleNotificationMenu()">
                     <i class="fa-regular fa-bell"></i>
                 </div>
-                <div class="navbox user" onclick="toggleUserMenu()">
-                    <div id="nav-username">@username</div>
+                <div class="navbox" onclick="toggleUserMenu()">
                     <i class="fa-regular fa-user" style="color: var(--cor-primaria);"></i>
+                    <div id="nav-username">@username</div>
                 </div>
             </div>
 
@@ -65,7 +60,12 @@
                         <h3>Menu</h2>
                     </div>
                     <hr>
-                    <a href="" class="sub-menu-link">
+                    <a href="./pages/user-profile.html?id=${userId}" class="sub-menu-link" id="myprofile">
+                        <i class="fa-solid fa-user"></i>
+                        <p>Meu perfil</p>
+                        <span>></span>
+                    </a>
+                    <a href="./pages/user-edit.html" class="sub-menu-link">
                         <i class="fa-solid fa-gear"></i>
                         <p>Editar Perfil</p>
                         <span>></span>
@@ -99,16 +99,7 @@
                         <h3>Notificações</h2>
                     </div>
                     <hr>
-                    <div class="notificationContainer" id="notificationContainer">
-                        <div class="notification">
-                            <p class="content">Fulano te convidou para uma pelada!</p>
-                            <button class="button2">Aceitar</button>
-                        </div>
-                        <div class="notification">
-                            <p class="content">Fulano te convidou para uma pelada!</p>
-                            <button class="button2">Aceitar</button>
-                        </div>
-                    </div>
+                    <div class="notificationContainer" id="notificationContainer"></div>
                 </div>
             </div>
 
