--- a/pages/arena-register.html
+++ b/pages/arena-register.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Visible Changes -->
-    <title>FindSports</title>
+    <title>FindSports - Criar Arena</title>
     <link rel="icon" type="image/svg" href="../assets/svg/findsports-icon.svg">
 
     <!-- Page Informations -->
@@ -42,11 +42,6 @@
           <li><a href="">Sobre Nós</a></li>
         </ul>
       </nav>
-
-      <div class="searchBox">
-        <span class="searchIcon material-symbols-outlined">search</span>
-        <input class="searchInput" type="search" placeholder="Buscar..">
-      </div> 
 
       <div class="menu">
         
@@ -82,11 +77,11 @@
 
             <div class="contentBox">
               <select class="selectMulti contentInput infoSubmit" id="sports" required multiple>
-                <option value="futebol">Futebol</option>
-                <option value="basquete">Basquete</option>
-                <option value="volei">Vôlei</option>
-                <option value="handball">Handball</option>
-                <option value="futsal">Futsal</option>
+                <option value="Futebol">Futebol</option>
+                <option value="Basquete">Basquete</option>
+                <option value="Volei">Vôlei</option>
+                <option value="Handball">Handball</option>
+                <option value="Futsal">Futsal</option>
               </select>
             </div>
 
